--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
-<html>
-    <head>
-         <link rel="stylesheet" href="style.css">
-        <title>
-            Dina abu zeena
+<html lang="en">
 
-        </title>
-        <style>
-           main{
-               background-color: blueviolet;
-           }
-        </style>
-    </head>
-    <body>
-        <header>
-        <h1 style="color:pink">My Name Dina Abzeena</h1> 
-        </header>
-        <main>
-            my name is Dina Abuzeena ; I am 30 years old ; I am communication engineer from
-             A-lBalqa Applied University
-             I want to study this course in order to get a new experience in my field of work
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-        </main>
-        <p>whats your name?</p>
-        <p>how old are you?</p>
-        <p>what do you work?</p>
-        <p>What is your favorite color</p>
-   
-        <footer>
-            myEmail:Dinamohammad735@gmail.com
 
-        </footer>
+    <link rel="stylesheet" href="style.css">
 
-        <script src="app.js">
-            </script>
+    <title></title>
+    Dina abu zeena
+    </title>
 
-    </body>
+    <style>
+        main {
+            background-color: blueviolet;
+        }
+    </style>
+</head>
+
+
+<body>
+    <header>
+        <h1 style="color:pink">My Name Dina Abzeena</h1>
+    </header>
+    <main>
+        my name is Dina Abuzeena ; I am 30 years old ; I am communication engineer from
+        A-lBalqa Applied University
+        I want to study this course in order to get a new experience in my field of work
+        <div>
+            <ul>
+                <li>whats your name?</li>
+                <li>how old are you?</li>
+                <li>what do you work?</li>
+                <li>What is your favorite color</li>
+            </ul>
+        </div>
+
+    </main>
+
+
+    <footer>
+        myEmail:Dinamohammad735@gmail.com
+
+    </footer>
+
+    <script src="app.js"></script>
+
+</body>
 
 </html>
